<resources>
    <string name="app_name">Chef</string>
    <string name="action_user_info">User info</string>
    <string name="ingredients_input_field_hint">Provide your ingredients</string>
    <string name="recipeCount_text_label">Number of search results:\u0020</string>
    <string name="preparationTime_text_label">Dish preparation time [min]: </string>
    <string name="button_search_label">Search for recipes</string>
    <string-array name="recipeCount_spinner_data">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="ingredientsCount_spinner_data">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>No limit</item>
    </string-array>
    <string-array name="preparationTime_spinner_data">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>No limit</item>
    </string-array>
    <string name="spinner_no_limt">No limit</string>
    <string name="preparation_details_disclaimer">Preparation details, please see:\u0020</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="singIn_button_label">Sign in</string>
    <string name="register_button_label">Register</string>
    <string name="Continue_without_signing">Continue without signing in</string>
    <string name="missing_email_password_message">Both email and password must be present</string>
    <string name="user_info_activity_label">User Info</string>
    <string name="user_label">User:</string>
    <string name="facebook_app_id">769958446731552</string>
    <string name="fb_login_protocol_scheme">fb769958446731552</string>
    <string name="show_favorites_button_label">Show Favorites</string>
    <string name="signOut_button_label">Sign out</string>
    <string name="ingredientsCount_text_label">Ingredients limit:\u0020</string>
    <string name="missing_ingredients_text"><u>Missing ingredients? See shops near you</u></string>
    <string name="nearby_shops_geo_uri">geo:0,0?q=grocery shop</string>
    <string name="google_maps_package">com.google.android.apps.maps</string>
</resources>
